[tool.poetry]
name = "tdd"
version = "0.1.0"
description = "Test driven development with Python Flask and Docker"
authors = ["lorenzo.alvarez <lorenzo.alvarezlorenzo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
flask-restx = "^0.2.0"
Flask-SQLAlchemy = "^2.4.4"
psycopg2 = "^2.8.6"
gunicorn ="^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"
httpie = "^2.4.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"